test/TestSuite/Scheduler/Errors/loop_detected_8.tjp
project test "Test" "1.0" 2000-01-01 - 2000-01-08

task a "Task A" {
	start 2000-01-01

	task m1 "Milestone1" {
		precedes !b1.c2
		scheduling asap
		milestone
	}	
	task b1 "Task B1" {
		task c1 "Task C1" {
			depends !!m1
			length 1d
		}
		task c2 "Task C2" {
			precedes !!b2.c2
		}
	}

	task b2 "Task B2" {
		task c1 "Task C1" {
			length 1d
			depends !!b1.c1
		  precedes !!m2 { onend }
			scheduling asap
		}
		task c2 "Task C2" {
			precedes !!m2
			length 1d
		}
	}	
	task m2 "Milestone2" {
		scheduling alap
		milestone
	}
}

# MARK: error 6 loop_detected
# MARK: info 12 loop_at_start
# MARK: info 12 loop_at_end
# MARK: info 22 loop_at_start
# MARK: info 22 loop_at_end
# MARK: info 33 loop_at_end
# MARK: info 33 loop_at_start
# MARK: info 28 loop_at_end
# MARK: info 28 loop_at_start
# MARK: info 16 loop_at_end
# MARK: info 16 loop_at_start
# MARK: error 6 loop_end

